# master_thesis

./: .gitignore  README  pyproject.toml  requirements.txt
src/: ADR.py  CNN.py
