[project]
name = "master-thesis"
version = "0.1.0"
description = ""
authors = [{name = "oYPIo", email = "voice2of2reason@gmail.com"}]
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
    "numpy==1.26.4",
    "scikit-learn==1.7.0",
    "matplotlib==3.10.3",
    "requests==2.32.4",
    "tqdm==4.67.1",
    "wandb==0.20.1",
    "nbformat==5.10.4",
    "kornia==0.8.1",
    "pygments==2.19.2",
]